--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>To Do App</title>
 </head>
 <body>
+    <div id="demo"></div>
     <section class="container">
         <div class="header">
             <img src="images/lws.png" alt="Logo">
